# gateway-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  dev-env.sh  docker-bake.hcl  start-dev-env.sh
.cargo/: config.toml
.github/workflows/: build-and-push.yml  rust.yml
dev-env/: custom-postgresql.conf  docker-compose-single-node.yaml  docker-compose.yaml
dev-env/config/: config-single.toml  config1.toml  config2.toml  config3.toml
dev-env/init-scripts/: init-schema.sql  init-seed.sql
docs/api/: client_api.md  console.md  integration.md  python.md  typescript.md
src/: build.rs  common.rs  config.rs  config_env.rs  config_model.rs  config_runtime.rs  lib.rs  main.rs  test_support.rs
src/api/: gateway_info.rs  mod.rs  request.rs  response.rs
src/bittensor/: crypto.rs  hotkey.rs  mod.rs  subnet_state.rs
src/client/: mod.rs
src/common/: cert.rs  company_usage.rs  crypto.rs  crypto_provider.rs  fs.rs  image.rs  log.rs  mod.rs  queue.rs  rate_limit_buffer.rs  resolve.rs  task.rs
src/common/queue/: mod.rs  tests.rs
src/common/queue/tests/: capacity.rs  concurrency.rs  expiration.rs  lifecycle.rs  mod.rs  routing.rs
src/crypto/: crypto_provider.rs  hotkey.rs  mod.rs  signature.rs
src/db/: connection.rs  data_access.rs  event_recorder.rs  gateway_settings.rs  key_validator.rs  mod.rs  repository.rs  task_lifecycle.rs  violation_tracker.rs
src/http3/: client.rs  client_ip.rs  company_rate_limits.rs  depot_ext.rs  distributed_rate_limiter.rs  error.rs  mod.rs  rate_limits.rs  response.rs  server.rs  state.rs  upload_limiter.rs  user_rate_limits.rs  whitelist.rs
src/http3/handlers/: admin.rs  common.rs  core.rs  mod.rs  result.rs  task.rs
src/http3/handlers/common/: activity.rs  mod.rs  model_errors.rs  multipart.rs  origin.rs  peer.rs  worker_auth.rs
src/http3/handlers/result/: add_result.rs  add_result_log.rs  add_result_parse.rs  mod.rs  read.rs
src/http3/handlers/task/: add_task.rs  add_task_billing.rs  add_task_log.rs  add_task_parse.rs  add_task_rate_limit.rs  get_load.rs  get_tasks.rs  mod.rs
src/http3/responses/: 400.html  404.html  405.html  429.html  500.html
src/metrics/: mod.rs
src/protocol/: mod.rs
src/raft/: archive.rs  gateway_state.rs  mod.rs  test_utils.rs  tests.rs
src/raft/client/: mod.rs
src/raft/memstore/: log_store.rs  mod.rs  persistence.rs
src/raft/network/: mod.rs
src/raft/rate_limit/: engine.rs  mod.rs  policy.rs
src/raft/server/: mod.rs
src/raft/store/: mod.rs  persistence.rs  snapshot_persistence.rs
src/raft/tests/: client.rs  cluster_bootstrap.rs  cross_gateway_add_task.rs  leader_failover.rs  membership_flows.rs  memstore_log_store.rs  memstore_persistence.rs  mod.rs  rate_limit_queue_flush.rs  rate_limit_sync.rs  server.rs  snapshot_flows.rs  store_snapshot_id.rs  store_state_machine.rs
src/server/: mod.rs
src/task/: mod.rs  tests.rs
tests/client_http_api/: add_task.rs  generic_rate_limits.rs  get_result.rs  get_status.rs  get_tasks.rs  misc.rs  mod.rs  rate_limit_violations.rs  rate_limits.rs  support.rs
tests/common/: mod.rs  real_harness.rs
tests/event_tracker/: activity.rs  add_result.rs  mod.rs  support.rs  worker.rs
