[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[dependencies]
salvo = { version = "0.82.0", features = [
    "quinn",
    "rustls",
    "rate-limiter",
    "affix-state",
    "size-limiter",
    "compression",
] }
spz-lib = { git = "https://github.com/404-Repo/spz-rs.git", rev = "d1c7e6dc186450d620adeea7b64a227965df7015", features = ["async"]}
multer = "3.1.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1"] }
async-tungstenite = { version = "0.31.0", features = [
    "tokio-runtime",
    "tokio-rustls-native-certs",
] }
async_zip = { version = "0.0.18", features = ["deflate"] }
futures = "0.3.31"
futures-util = "0.3.31"
tokio-util = "0.7.16"
clap = "4.5.45"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
quinn = { version = "0.11.8", features = ["rustls", "runtime-tokio", "log"] }
h3 = { version = "0.0.8", features = ["tracing"] }
h3-quinn = { version = "0.0.10" }
http = "1.3.1"
backon = "1.5.2"
openraft = { version = "0.9.21", features = ["storage-v2", "serde"] }
tokio-postgres-rustls = "0.13.0"
rustls = { version = "0.23.31" }
rustls-platform-verifier = "0.6.1"
rustls-pemfile = "2.2.0"
toml = "0.9.5"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
rmp-serde = "1.3.0"
anyhow = "1.0.99"
bytes = "1.10.1"
rcgen = { version = "0.14.3", features = ["pem"] }
foldhash = "0.2.0"
scc = "2.4.0"
sdd = "4.0.0"
hex = "0.4.3"
schnorrkel = "0.11.5"
base64 = "0.22.1"
parity-scale-codec = { version = "3.7.5", features = ["derive"] }
blake2 = "0.10.6"
bs58 = "0.5.1"
itertools = "0.14.0"
prometheus = "0.14.0"
argon2 = "0.5.3"
moka = { version = "0.12.10", features = ["sync"] }
mimalloc = { version = "0.1.47", default-features = false }
regex = "1.11.2"

[build-dependencies]
anyhow = "1.0.99"
vergen-gitcl = { version = "1.0.8", features = ["build", "cargo", "rustc"] }

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
