[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[dependencies]
salvo = { version = "0.84.2", features = [
    "quinn",
    "rustls",
    "rate-limiter",
    "affix-state",
    "size-limiter",
    "compression",
] }
spz-lib = { git = "https://github.com/404-Repo/spz-rs.git", rev = "7840f8248903e8c094c844a76d60143635850ff7", features = ["async"]}
multer = "3.1.0"
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "fs",
    "net",
    "signal",
    "io-util",
] }
tokio-postgres = { version = "0.7.15", features = ["with-uuid-1", "with-chrono-0_4"] }
async-tungstenite = { version = "0.32.0", features = [
    "tokio-runtime",
    "tokio-rustls-native-certs",
] }
async_zip = { version = "0.0.18", features = ["deflate"] }
futures = "0.3.31"
futures-util = "0.3.31"
tokio-util = "0.7.16"
clap = "4.5.52"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-appender = "0.2.3"
quinn = { version = "0.11.9", features = ["rustls", "runtime-tokio", "log"] }
h3 = { version = "0.0.8", features = ["tracing"] }
h3-quinn = { version = "0.0.10" }
http = "1.3.1"
backon = "1.6.0"
openraft = { version = "0.9.21", features = ["storage-v2", "serde"] }
tokio-postgres-rustls = "0.13.0"
rustls = { version = "0.23.35" }
rustls-platform-verifier = "0.6.2"
rustls-pemfile = "2.2.0"
toml = "0.9.8"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rmp-serde = "1.3.0"
anyhow = "1.0.100"
bytes = "1.10.1"
rcgen = { version = "0.14.5", features = ["pem"] }
foldhash = "0.2.0"
scc = "3.4.2"
sdd = "4.3.2"
hex = "0.4.3"
schnorrkel = "0.11.5"
base64-simd = "0.8"
parity-scale-codec = { version = "3.7.5", features = ["derive"] }
blake2 = "0.10.6"
bs58 = "0.5.1"
itertools = "0.14.0"
prometheus = "0.14.0"
blake3 = "1.8.2"
moka = { version = "0.12.11", features = ["sync"] }
mimalloc = { version = "0.1.48", default-features = false }
regex = "1.12.2"
image = "0.25.8"
chrono = { version = "0.4", features = ["serde", "clock"] }
itoa = "1.0.15"
zstd = "0.13"
tempfile = "3.23.0"

[dev-dependencies]

[build-dependencies]
anyhow = "1.0.100"
vergen-gitcl = { version = "1.0.8", features = ["build", "cargo", "rustc"] }

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
