[package]
name = "gateway"
version = "0.1.0"
edition = "2024"
build = "src/build.rs"

[dependencies]
salvo = { version = "0.91.1", features = [
    "quinn",
    "rustls",
    "rate-limiter",
    "affix-state",
    "size-limiter",
    "compression",
] }
spz-lib = { git = "https://github.com/404-Repo/spz-rs.git", rev = "227c6cb6cdc252486304a9ed9aa798e5ba9131c3", features = [
    "async",
] }
multer = "3.1.0"
tokio = { version = "1.52.1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "fs",
    "net",
    "signal",
    "io-util",
] }
tokio-postgres = { version = "0.7.17", features = [
    "with-uuid-1",
    "with-chrono-0_4",
] }
async_zip = { version = "0.0.18", features = ["deflate", "tokio"] }
futures = "0.3.32"
futures-util = "0.3.32"
tokio-util = { version = "0.7.18", features = ["io"] }
clap = "4.6.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-appender = "0.2.4"
async-trait = "0.1.89"
quinn = { version = "0.11.9", features = ["rustls", "runtime-tokio", "log"] }
h3 = { version = "0.0.8", features = ["tracing"] }
h3-quinn = { version = "0.0.10" }
http = "1.4.0"
backon = "1.6.0"
openraft = { version = "0.9.22", features = ["storage-v2", "serde"] }
tokio-postgres-rustls = "0.13.0"
rustls = { version = "0.23.38" }
rustls-platform-verifier = "0.7.0"
toml = "1.1.2"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rmp-serde = "1.3.1"
anyhow = "1.0.102"
bytes = "1.11.1"
rcgen = { version = "0.14.7", features = ["pem"] }
foldhash = "0.2.0"
portable-atomic = "1.13.1"
scc = "3.7.0"
sdd = "4.8.3"
schnorrkel = "0.11.5"
base64-simd = "0.8"
blake2 = "0.10.6"
bs58 = "0.5.1"
prometheus = "0.14.0"
blake3 = "1.8.4"
moka = { version = "0.12.15", features = ["sync"] }
mimalloc = { version = "0.1.48", default-features = false }
regex = "1.12.3"
image = "0.25.10"
chrono = { version = "0.4", features = ["serde", "clock"] }
itoa = "1.0.18"
zstd = "0.13"
tempfile = "3.27.0"
notify = "8.2.0"
rand = "0.10.1"

[dev-dependencies]
hyper = "1.9.0"
http-body-util = "0.1.3"
futures-lite = { version = "2.6.1", default-features = false, features = [
    "std",
] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "multipart"] }
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }

[features]
test-support = []

[[bin]]
name = "gateway"
path = "src/main.rs"
test = false

[[test]]
name = "client_http_api"
path = "tests/client_http_api/mod.rs"
required-features = ["test-support"]

[[test]]
name = "event_tracker"
path = "tests/event_tracker/mod.rs"
required-features = ["test-support"]

[build-dependencies]
anyhow = "1.0.100"
vergen-gitcl = { version = "9.1.0", features = ["build", "cargo", "rustc"] }

[profile.release]
codegen-units = 1
opt-level = 3
lto = true

[patch.crates-io]
h3 = { git = "https://github.com/hyperium/h3", rev = "704b37a2e82cf4c8de379ec779dbc2a23bfcb9a1" }
h3-quinn = { git = "https://github.com/hyperium/h3", rev = "704b37a2e82cf4c8de379ec779dbc2a23bfcb9a1" }
h3-datagram = { git = "https://github.com/hyperium/h3", rev = "704b37a2e82cf4c8de379ec779dbc2a23bfcb9a1" }
